<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="8dp">

        <ImageView
            android:id="@+id/popular_movie_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/shang_chi" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/popular_movie_name"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/cardView"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/shang_chi_and_the_legend_of_the_ten_rings"
        android:textColor="@color/basic_color"
        android:textSize="16sp"
        android:textStyle="bold" />

    <RatingBar
        android:id="@+id/popular_movie_rating"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/popular_movie_name"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/cardView"
        android:numStars="1"
        android:progressBackgroundTint="@color/yellow"
        android:progressTint="@color/yellow" />

    <TextView
        android:id="@+id/movie_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/popular_movie_name"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/popular_movie_rating"
        android:text="@string/movie_rating"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/popular_movie_name"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/movie_rating"
        android:text="@string/movie_rating_complete"
        android:textSize="12sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/genre_popular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/popular_movie_rating"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:layout_toRightOf="@+id/cardView"
        android:padding="5dp"
        android:text="@string/see_more_recycler"
        android:textColor="@color/color_genre_text"
        android:textSize="10sp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/genre_item" />

    <ImageView
        android:id="@+id/time_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_below="@id/genre_popular"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/cardView"
        android:src="@drawable/ic_access_time" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/genre_popular"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/time_icon"
        android:text="@string/_1h_47m"
        android:textColor="@color/black"
        android:textSize="14sp" />
</RelativeLayout>