<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="160dp"
        android:layout_height="230dp"
        app:cardCornerRadius="10dp">

        <ImageView
            android:id="@+id/movie_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/spider_man" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/movie_name"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardView"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/movie_name"
        android:textColor="@color/basic_color"
        android:textSize="16sp"
        android:textStyle="bold" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/movie_name"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:numStars="1"
        android:progressBackgroundTint="@color/yellow"
        android:progressTint="@color/yellow" />

    <TextView
        android:id="@+id/movie_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/movie_name"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/ratingBar"
        android:text="@string/movie_rating"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_name"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/movie_rating"
        android:text="@string/movie_rating_complete"
        android:textSize="12sp" />
</RelativeLayout>