<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Fragment.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/loadProgress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateTint="#1C6DD0"
            android:visibility="visible" />

        <RelativeLayout
            android:id="@+id/childLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/top_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp">

            <TextView
                    android:id="@+id/top_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:text="@string/now_showing"
                    android:textColor="@color/genre_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/see_more"
                    android:padding="5dp"
                    android:text="@string/see_more"
                    android:textColor="@color/color_genre_text"
                    android:textSize="10sp" />


            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_movie"
                android:layout_width="match_parent"
                android:layout_height="310dp"
                android:layout_below="@+id/top_layout"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/horizontal_rv_item" />

            <RelativeLayout
                android:id="@+id/popular_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/recycler_movie"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/popular_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:text="@string/popular"
                    android:textColor="@color/genre_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/see_more"
                    android:padding="5dp"
                    android:text="@string/see_more"
                    android:textColor="@color/color_genre_text"
                    android:textSize="10sp" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popularRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/popular_layout"
                android:layout_marginStart="5dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/vertical_rv_item" />
        </RelativeLayout>
    </RelativeLayout>

</androidx.core.widget.NestedScrollView>